sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:16: error: 'while' expected but 'for' found.
    for (i<- j to k by -1)
    ^AlgCocktailSort3:17: error: '(' expected but ';' found.
      if (! isSmaller(i,i+1)){
^AlgCocktailSort3:24: error: ';' expected but 'while' found.
  }  while (swapped);
     ^AlgCocktailSort3:28: error: Unmatched closing brace '}' ignored here
}
^